--- a/web_app_drawer/static/src/css/web_app_drawer.css
+++ b/web_app_drawer/static/src/css/web_app_drawer.css
@@ -8,12 +8,12 @@ body {
 
 /* Menu Bar */
 .css-main-nav {
-    margin-bottom: 0 !important;
-    min-height: 2em !important;
+    margin-bottom: 0;
+    min-height: 2em;
 }
 
 .css-main-nav ul.nav > li > a {
-    padding: 0.625em !important; 
+    padding: 0.625em; 
     height: 2.5em;
 }
 
@@ -21,17 +21,13 @@ body {
     margin-top: .625em;
 }
 
-.css-app-drawer-toggle-desktop {
-    max-height: 2.2em;
-}
-
-.css-app-drawer-toggle-mobile {
-    max-height: 3em;
+.css-app-drawer-toggle {
+    padding: 0.625em;
 }
 
 .js-toggle-app-drawer {
-    padding-top: 0 !important;
-    padding-bottom: 0 !important;
+    padding-top: 0;
+    padding-bottom: 0;
 }
 
 .oe_topbar_avatar {
@@ -89,7 +85,7 @@ body {
 }
 
 /* App Drawer */
-.css-app-drawer {
+.css-app-drawer-nav {
     border-color: #e7e7e7;
     color: #333333;
     background-color: #f8f8f8;
@@ -100,31 +96,18 @@ body {
     width: 5.625em;
 }
 
-.slideout-menu {
-    position: fixed;
-    left: 0;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    z-index: 0;
-    width: 350px;
-    overflow-y: auto;
-    -webkit-overflow-scrolling: touch;
-    display: none;
+.drawer-nav {
+    width: 41.875em;
 }
 
-.slideout-panel {
-    position: relative;
-    z-index: 1;
+.drawer--left .drawer-nav {
+    left: -41.875em;
 }
 
-.slideout-open,
-.slideout-open body,
-.slideout-open .slideout-panel {
-    overflow: hidden;
+.drawer--left.drawer-open .drawer-hamburger {
+    left: 41.875em;
 }
 
-.slideout-open .slideout-menu {
-    display: block;
+.drawer--right .drawer-nav {
+    right: -41.875em;
 }
-
