--- a/web_app_drawer/views/assets.xml
+++ b/web_app_drawer/views/assets.xml
@@ -11,10 +11,17 @@
         <xpath expr=".">
 			<link rel="stylesheet"
 				  type="text/css"
+				  href="/web_app_drawer/static/lib/css/drawer.3.2.0.min.css"
+				  />
+			<link rel="stylesheet"
+				  type="text/css"
 				  href="/web_app_drawer/static/src/css/web_app_drawer.css"
 				  />
+			<script type="application/javascript"
+                    src="/web_app_drawer/static/lib/js/iscroll.5.1.3.min.js"
+					/>
             <script type="application/javascript"
-                    src="/web_app_drawer/static/lib/js/slideout.min.js"
+                    src="/web_app_drawer/static/lib/js/drawer.3.2.0.min.js"
 					/>
 			<script type="application/javascript"
                     src="/web_app_drawer/static/src/js/web_app_drawer.js"
