* Add app and widget panels * Calc x & y coords of app icons on drawer open * Begin keyboard selection

--- a/web_app_drawer/static/src/css/web_app_drawer.css
+++ b/web_app_drawer/static/src/css/web_app_drawer.css
@@ -165,3 +165,8 @@ main {
 .css-app-drawer-toggle.navbar-toggle {
     margin-left: 1em;
 }
+
+.keyboard-selected {
+    color: #22527b;
+    background-color: #eeeeee;
+}
