--- a/web_app_drawer/views/assets.xml
+++ b/web_app_drawer/views/assets.xml
@@ -11,17 +11,28 @@
         <xpath expr=".">
             <link rel="stylesheet"
                   type="text/css"
-                  href="/web_app_drawer/static/lib/css/drawer.3.2.0.min.css"
+                  href="/web_app_drawer/static/lib/css/drawer.3.2.0.css"
                   />
             <link rel="stylesheet"
-                  type="text/css"
-                  href="/web_app_drawer/static/src/css/web_app_drawer.css"
+                  href="/web_app_drawer/static/src/less/variables.less"
+                  />
+            <link rel="stylesheet"
+                  href="/web_app_drawer/static/src/less/main.less"
+                  />
+            <link rel="stylesheet"
+                  href="/web_app_drawer/static/src/less/dropdowns.less"
+                  />
+            <link rel="stylesheet"
+                  href="/web_app_drawer/static/src/less/navbar.less"
+                  />
+            <link rel="stylesheet"
+                  href="/web_app_drawer/static/src/less/app_drawer.less"
                   />
             <script type="application/javascript"
-                    src="/web_app_drawer/static/lib/js/iscroll.5.1.3.min.js"
+                    src="/web_app_drawer/static/lib/js/iscroll.5.2.0.js"
                     />
             <script type="application/javascript"
-                    src="/web_app_drawer/static/lib/js/drawer.3.2.0.min.js"
+                    src="/web_app_drawer/static/lib/js/drawer.3.2.0.js"
                     />
             <script type="application/javascript"
                     src="/web_app_drawer/static/src/js/web_app_drawer.js"
