--- a/web_app_drawer/static/src/less/navbar.less
+++ b/web_app_drawer/static/src/less/navbar.less
@@ -2,7 +2,7 @@
  * License LGPL-3.0 or later (http://www.gnu.org/licenses/lgpl). */
 
 .main-nav {
-    margin-bottom: @navbar-margin-bottom;
+    margin-bottom: 0;
     min-height: @navbar-height;
 }
 
@@ -12,7 +12,7 @@
 }
 
 .oe_topbar_avatar {
-    height: (@navbar-height - 20%);
+    height: (@navbar-height - 10%);
     border-radius: 50%;
 }
 
