--- a/web_app_drawer/static/src/less/variables.less
+++ b/web_app_drawer/static/src/less/variables.less
@@ -6,3 +6,9 @@
 @app-drawer-icon-size:      5.625em;
 @app-drawer-icon-margin:    0.625em;
 @app-drawer-width:          80%;
+
+// Navbar
+
+@navbar-height:  30px;
+@navbar-padding-vertical: 5px;
+@navbar-padding-horizontal: 10px;
