--- a/web_app_drawer/static/src/less/variables.less
+++ b/web_app_drawer/static/src/less/variables.less
@@ -6,6 +6,7 @@
 @app-drawer-icon-size:      5.625em;
 @app-drawer-icon-margin:    0.625em;
 @app-drawer-width:          80%;
+@app-drawer-title-height:   4em;
 
 // Navbar
 
