--- a/web_app_drawer/static/src/less/navbar.less
+++ b/web_app_drawer/static/src/less/navbar.less
@@ -12,7 +12,8 @@
 }
 
 .oe_topbar_avatar {
-    height: (@navbar-height - 10%);
+    margin-top: -@navbar-padding-horizontal;
+    height: @navbar-height;
     border-radius: 50%;
 }
 
