--- a/web_app_drawer/static/src/less/variables.less
+++ b/web_app_drawer/static/src/less/variables.less
@@ -6,10 +6,10 @@
 @app-drawer-icon-size:      5.625em;
 @app-drawer-icon-margin:    0.625em;
 @app-drawer-width:          80%;
-@app-drawer-title-height:   4em;
+@app-drawer-title-height:   2.9em;
 
 // Navbar
 
-@navbar-height:  30px;
-@navbar-padding-vertical: 5px;
-@navbar-padding-horizontal: 10px;
+@navbar-height:  2.3em;
+@navbar-padding-vertical: .565em;
+@navbar-padding-horizontal: .565em;
