--- a/web_app_drawer/views/web.xml
+++ b/web_app_drawer/views/web.xml
@@ -179,6 +179,12 @@
               name="App Drawer - Menu Link"
               >
         
+        <xpath expr="//a" position="attributes">
+            <attribute name="t-att-data-menu-name">
+                menu['name']
+            </attribute>
+        </xpath>
+        
         <xpath expr="//span[@class='oe_menu_text']" position="replace">
             <t t-if="display_images">
                 <img t-attf-src="/web/image/ir.ui.menu/{{ menu['id'] }}/web_icon_data"
