Fixes * less variables * remove subdropdowns - scroll not fully implemented, need jQuery page height * die tabs * replacements preferred to hiding

--- a/web_app_drawer/static/src/less/app_drawer.less
+++ b/web_app_drawer/static/src/less/app_drawer.less
@@ -60,7 +60,7 @@
 
 .drawer .app-drawer-icon-close {
     display: none;
-    height: app-drawer-title-height;
+    height: @app-drawer-title-height;
 }
 
 .drawer--left.drawer-open .app-drawer-icon-close {
