--- a/web_app_drawer/static/src/less/navbar.less
+++ b/web_app_drawer/static/src/less/navbar.less
@@ -17,16 +17,17 @@
     border-radius: 50%;
 }
 
-.progress {
-    margin-top: -@navbar-padding-horizontal;
-}
-
 .navbar-collapse, .navbar-toggle {
     padding-top: 2px;
     padding-bottom: 2px;
     margin-top: 0px;
     margin-bottom: 0px;
     height: @navbar-height;
+}
+
+.dropdown-scrollable {
+    height: auto;
+    overflow-x: hidden;
 }
 
 @media (max-width: @screen-sm - 1px) {
