--- a/web_app_drawer/static/src/less/variables.less
+++ b/web_app_drawer/static/src/less/variables.less
@@ -3,13 +3,13 @@
 
 // App Drawer / Icons
 
-@app-drawer-icon-size:      5.625em;
-@app-drawer-icon-margin:    0.625em;
+@app-drawer-icon-size:      7em;
+@app-drawer-icon-margin:    1em;
 @app-drawer-width:          80%;
-@app-drawer-title-height:   3.5em;
+@app-drawer-title-height:   @navbar-height;
 
 // Navbar
 
-@navbar-height:  2.3em;
-@navbar-padding-vertical: .565em;
-@navbar-padding-horizontal: .565em;
+@app-drawer-navbar-height:  @navbar-height / 2;
+@app-drawer-navbar-padding-vertical: @navbar-padding-vertical / 2;
+@app-drawer-padding-horizontal: @navbar-padding-horizontal / 2;
