[FIX] App drawer header scrolling

--- a/web_app_drawer/static/src/less/app_drawer.less
+++ b/web_app_drawer/static/src/less/app_drawer.less
@@ -33,9 +33,16 @@
         width: @app-drawer-icon-size;
         margin: @app-drawer-icon-margin;
     }
+    
+    .panel-body {
+        padding-top: @app-drawer-title-height;
+    }
 
     #appDrawerAppPanelHead {
+        position: absolute;
         height: @app-drawer-title-height;
+        width: 100%;
+        z-index: 9999;
     }
     
 }
